--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,13 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --primary-900: 24 50 30;
+}
+
 @layer base {
   :root {
+    --background-app-rgb: 244, 245, 247;
     --color-primary-900: 74, 109, 255;
     --color-primary-800: 92, 124, 255;
     --color-primary-700: 110, 138, 255;
@@ -26,59 +31,11 @@
     --color-secondary-200: 191, 192, 203;
     --color-secondary-100: 212, 213, 221;
     --color-secondary-50: 223, 223, 229;
-    --color-fill: 67, 56, 202;
-    --color-title: 63, 66, 100; /* secondary-800 */
-    --color-text-base: 106, 108, 135; /* secondary-600 */
-    --color-text-muted: 148, 150, 169; /* secondary-400 */
-    --color-text-inverted: 255, 255, 255; /* white */
-    --color-button-primary: 74, 109, 255; /* primary-900 */
-    --color-button-primary-hover: 110, 138, 255; /* primary-700 */
-    --color-button-muted: 223, 223, 229; /* secondary-50 */
-    --color-icon-primary: 74, 109, 255; /* primary-900 */
-    --color-icon-secondary-dkst: 42, 45, 83; /* secondary-900 */
-    --color-icon-secondary-dk: 85, 87, 117; /* secondary-700 */
-    --color-icon-secondary-lt: 127, 129, 152; /* secondary-500 */
     --color-success: 0, 192, 115;
     --color-warning: 255, 153, 0;
     --color-error: 255, 71, 87;
     --color-red-500: 239, 68, 68;
     --color-red-300: 252, 165, 165;
-    --scroll-primary: #efefef;
-    --scroll-secondary: #ccc;
-  }
-  .textField--invalid .textField__input {
-    border-color: rgb(var(--color-red-500));
-  }
-  .textField--invalid .textField__input:focus {
-    border-color: rgb(var(--color-red-500));
-    box-shadow: 0 12px 24px -8px rgb(var(--color-red-300));
-  }
-  .inputOtpField input {
-    width: 100% !important;
-    padding: 15px 10px !important;
-  }
-}
-@layer components {
-  .btn {
-    @apply px-2 py-1 font-bold rounded-2xl transition-all duration-300;
-  }
-  .btn--primary {
-    @apply bg-skin-button-primary text-white hover:bg-primary-800 shadow-lg shadow-primary-300;
-  }
-  .btn--secondary {
-    @apply text-secondary-800 hover:bg-gray-100 bg-secondary-100/50 rounded-xl;
-  }
-  .btn--outline {
-    @apply border-secondary-100 border-2 border-opacity-50 px-3 py-2  text-secondary-600;
-  }
-  .btn-add-to-cart {
-    @apply px-6 py-2.5;
-  }
-  .btn-swiper-controller {
-    @apply bg-white shadow-xl shadow-gray-300/80 p-2 md:p-3 min-w-min flex items-center rounded-full justify-center disabled:!bg-opacity-60 disabled:shadow-none disabled:!opacity-50 hover:bg-gray-50;
-  }
-  .textField__input {
-    @apply mt-4 w-full py-3 px-4 rounded-xl bg-gray-100 text-secondary-900 border border-gray-100 outline-none duration-200 transition-all ease-in-out hover:border-primary-300 focus:outline-none focus:border-primary-300 focus:shadow-input-focus focus:bg-white;
   }
 }
 
@@ -89,7 +46,7 @@ body {
   font-family: "Vazir";
   min-height: 100vh;
   user-select: none;
-  background-color: #f4f5f7;
+  background-color: rgb(var(--background-app-rgb));
 }
 
 * {
@@ -97,6 +54,8 @@ body {
   scroll-behavior: smooth;
   border: none;
   outline: none;
+  padding: 0;
+  margin: 0;
 }
 
 button {
