--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 
 @layer base {
   :root {
-    --background-app-rgb: 244, 245, 247;
+    --background-app-rgb: 255, 255, 255;
     --color-primary-900: 74, 109, 255;
     --color-primary-800: 92, 124, 255;
     --color-primary-700: 110, 138, 255;
@@ -21,21 +21,40 @@
     --color-primary-200: 201, 211, 255;
     --color-primary-100: 219, 226, 255;
     --color-primary-50: 228, 233, 255;
-    --color-secondary-900: 42, 45, 83;
-    --color-secondary-800: 63, 66, 100;
-    --color-secondary-700: 85, 87, 117;
-    --color-secondary-600: 106, 108, 135;
-    --color-secondary-500: 127, 129, 152;
-    --color-secondary-400: 148, 150, 169;
-    --color-secondary-300: 170, 171, 186;
-    --color-secondary-200: 191, 192, 203;
-    --color-secondary-100: 212, 213, 221;
-    --color-secondary-50: 223, 223, 229;
+    --color-secondary-900: 17, 24, 39;
+    --color-secondary-800: 31, 41, 55;
+    --color-secondary-700: 55, 65, 81;
+    --color-secondary-600: 75, 85, 99;
+    --color-secondary-500: 107, 114, 128;
+    --color-secondary-400: 156, 163, 175;
+    --color-secondary-300: 209, 213, 219;
+    --color-secondary-200: 229, 231, 235;
+    --color-secondary-100: 243, 244, 246;
+    --color-secondary-50: 249, 250, 251;
     --color-success: 0, 192, 115;
     --color-warning: 255, 153, 0;
     --color-error: 255, 71, 87;
     --color-red-500: 239, 68, 68;
     --color-red-300: 252, 165, 165;
+  }
+}
+
+@layer components {
+  .textField__input {
+    @apply w-full py-3 px-4 rounded-xl text-secondary-900 border border-gray-100 bg-gray-100 hover:border-primary-500 focus:border-primary-500 focus:bg-white transition-all duration-300 ease-out focus:shadow-lg focus:shadow-primary-200;
+  }
+  .btn {
+    @apply px-3 py-1 font-bold rounded-xl transition-all duration-300;
+  }
+  .btn--primary {
+    @apply px-4 py-3 bg-primary-900 text-secondary-100 hover:bg-primary-800 shadow-lg shadow-primary-300;
+  }
+  .btn--secondary {
+    @apply bg-secondary-600 text-secondary-100;
+  }
+  .badge {
+  }
+  .badge--primary {
   }
 }
 
@@ -52,7 +71,7 @@ body {
 * {
   box-sizing: border-box;
   scroll-behavior: smooth;
-  border: none;
+  /* border: none; */
   outline: none;
   padding: 0;
   margin: 0;
@@ -67,4 +86,8 @@ button:disabled {
   background-color: rgb(var(--color-secondary-100), 0.5);
   pointer-events: none;
   box-shadow: none;
+}
+
+label {
+  display: block;
 }
