--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@
     --color-secondary-200: 229, 231, 235;
     --color-secondary-100: 243, 244, 246;
     --color-secondary-50: 249, 250, 251;
+    --color-secondary-0: 255 255 255;
     --color-success: 0, 192, 115;
     --color-warning: 255, 153, 0;
     --color-error: 255, 71, 87;
